--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 <!-- Section Title Start -->
                 <div class="section-title">
                   <span class="subtitle">Curious</span>
-                  <span class="title">Become part of our global network</span>
+                  <span class="title">Team up or Partner up</span>
                   <h2>Come meet us in person</h2>
                   <span class="divider"></span>
                   <p class="contact-text">You can call us or leave a request here. We are always glad to see you in our office from 9:00 to 18:00.
