--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
           <div class="row m-0 fullheight">
 
             <!-- Main Section Intro Start -->
-            <div class="col-12 fullheight home_intro">
+            <div class="col-12 fullheight home_intro style="background-image:url(img/backgrounds/paradigm_bg.jpg">
 
-              <!-- Background Effect Start -->
+              <!-- Background Effect Start
               <div class="fullscreen">
                 <div id="bgndKenburns"></div>
               </div>
-              <!-- Background Effect End -->
+              Background Effect End -->
 
               <div class="layer-black"></div>
 
