--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <!-- Page Title-->
-    <title>Mixio</title>
+    <title>Paradigm | Content creation, done right</title>
 
     <!-- Meta Tags-->
     <meta name="description" content="Mixio - awesome coming soon template to kick-start your project">
