--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="row m-0 fullheight">
 
             <!-- Main Section Intro Start -->
-            <div class="col-12 fullheight home_intro style="background-image:url(img/backgrounds/paradigm_bg.jpg)">
+            <div class="col-12 fullheight home_intro style="background-image:url(img/backgrounds/paradigm_bg.jpg);">
 
               <!-- Background Effect Start
               <div class="fullscreen">
