--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
     <script src="js/libs.min.js"></script>
     <script src="js/gallery-init.js"></script>
     <script src="js/mixio-custom.js"></script>
-    <script src="js/maps/map-dark.js"></script>
+    <script src="js/maps/map-silver.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLyU4mZ5KOey_EyjA6nsp2qofkYcpjd3s"></script>
     <!-- Load Scripts End-->
 
