--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                   <span class="title">The Gastronomical equivalent to Top Gear</span>
                   <h2>Label Drinkers</h2>
                   <span class="divider"></span>
-                  <p>In Label Drinkers the viewer will be shown the magical world of Champagne (Season 1) where producers, together with our recognised hosts discuss everything from wine making processes down to nerdy details, satisfying the most prestigious taster or enthusiast.</p><br><p>What really differs from the masses of TV shows are the detailed revealing of the consumer side and their behaviours. From luxurious fine dining around the world to celebrities, party life, hidden and mysterious sides of rich and famous with Yachts, Private Jets and First Class flights to Formula One races and a lot lot more, including famous guest appearances in each episode.</p><br><p>Simultaneously this series will uncover and reveal myths connected to each episodes story line.</p>
+                  <p>In Label Drinkers the viewer will be shown the magical world of Champagne (Season 1) where producers, together with our recognised hosts discuss everything from wine making processes down to nerdy details, satisfying the most prestigious taster or enthusiast.</p><br><p>What really differs from the masses of TV shows are the detailed revealing of the consumer side and their behaviours. From luxurious fine dining around the world to celebrities, party life, hidden and mysterious sides of rich and famous with Yachts, Private Jets and First Class flights to Formula One races and a lot lot more, including famous guest appearances in each episode.</p><br><p>Simultaneously this series will uncover and reveal myths connected to each episodes story line.</p><br><p>Read more at <a href="https://labeldrinkers.com">labeldrinkers.com <cite class="light-text-06"> [EDU-TAINMENT]</cite>
                 </div>
                 <!-- Section Title End -->
 
@@ -479,8 +479,8 @@
                   <span class="divider"></span>
                   <p class="contact-text">You can call us or leave a request here. We are always glad to see you in our office from 9:00 to 18:00.
                     Contact us via phone:
-                    <a href="tel:+12127089400">+1 212-708-9400</a> or email:
-                    <a href="mailto:example@example.com?subject=Message%20from%20your%20site">example@example.com</a>
+                    <a href="tel:+12127089400">+46 72 700 70 70</a> or email:
+                    <a href="mailto:example@example.com?subject=Message%20from%20your%20site">info@pdgmg.com</a>
                   </p>
                   <a href="#" id="writealine-trigger" class="btn btn-line">
                     <span>write a line</span>
