--- a/index.html
+++ b/index.html
@@ -474,13 +474,13 @@
                 <!-- Section Title Start -->
                 <div class="section-title">
                   <span class="subtitle">Curious</span>
-                  <span class="title">Team up or Partner up</span>
+                  <span class="title">Wanna Team-up or Partner-up</span>
                   <h2>Come meet us in person</h2>
                   <span class="divider"></span>
                   <p class="contact-text">You can call us or leave a request here. We are always glad to see you in our office from 9:00 to 18:00.
                     Contact us via phone:
-                    <a href="tel:+12127089400">+46 72 700 70 70</a> or email:
-                    <a href="mailto:example@example.com?subject=Message%20from%20your%20site">info@pdgmg.com</a>
+                    <a href="tel:+46727007070">+46 72 700 70 70</a> or email:
+                    <a href="mailto:info@pdgmg.com?subject=Message%20from%20your%20site">info@pdgmg.com</a>
                   </p>
                   <a href="#" id="writealine-trigger" class="btn btn-line">
                     <span>write a line</span>
