--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
                   <span class="title">Wanna Team-up or Partner-up</span>
                   <h2>Come meet us in person</h2>
                   <span class="divider"></span>
-                  <p class="contact-text">You can call us or leave a request here. We are always glad to see you in our office from 9:00 to 18:00.
-                    <br>Contact us via phone:
+                  <p class="contact-text">You can call us or leave a request here. We are always glad to see you in our office located at Twenty Studios in Stockholm.
+                  </p><br><p>Contact us via phone:
                     <a href="tel:+46727007070">+46 72 700 70 70</a><br>or email:
                     <a href="mailto:info@pdgmg.com?subject=Message%20from%20your%20site">info@pdgmg.com</a>
                   </p>
