--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
                   <!-- Works Gallery Single Item Start -->
                   <figure class="col-12 col-md-6 p-0" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="img/features/celebs.jpg" class="works-link" data-image="img/features/celebs.jpg" itemprop="contentUrl" data-size="1200x900">
+                    <a href="img/features/celebs.jpg" class="works-link" data-image="img/features/celebs.jpg" itemprop="contentUrl" data-size="1920x1080">
                       <img src="img/features/celebs.jpg" class="works-image" itemprop="thumbnail" alt="Image description" />
                     </a>
                     <figcaption class="works-description" itemprop="caption description">
@@ -422,7 +422,7 @@
 
                   <!-- Works Gallery Single Item Start -->
                   <figure class="col-12 col-md-6 p-0" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="img/features/hosts_big.jpg" class="works-link" data-image="img/features/hosts.jpg" itemprop="contentUrl" data-size="1200x900">
+                    <a href="img/features/hosts.jpg" class="works-link" data-image="img/features/hosts.jpg" itemprop="contentUrl" data-size="1200x900">
                       <img src="img/features/hosts.jpg" class="works-image" itemprop="thumbnail" alt="Image description" />
                     </a>
                     <figcaption class="works-description" itemprop="caption description">
