--- a/labeldrinkers.html
+++ b/labeldrinkers.html
@@ -78,12 +78,15 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-md-9">
+				<div class="col-xs-10 col-md-8">
 					<p>In Label Drinkers the viewer will be shown the magical world of Champagne (Season 1) where producers, together with our recognised hosts discuss everything from wine making processes down to nerdy details, satisfying the most prestigious taster or enthusiast.</p>
-						<p style="color:orange">But wait, that's what all series about beverages do!!</p>				
+					<p style="color:orange">But wait, that's what all series about beverages do!!</p>				
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-xs-6 col-md-4">			
-						<p>We've done it differently, by gathering some of the worlds leading experts to host and reveal what people really would like to watch...</p><p>The consuming side and their behaviours.</p>
+						<p>We've done it differently, by gathering some of the worlds leading experts to host and reveal what people really would like to watch...</p>
+						<p>The consuming side and their behaviours.</p>
 				</div>
 				<div class="col-xs-6 col-md-4">			
 					<p>From luxurious fine dining around the world to celebrities, party life, hidden and mysterious sides of rich and famous with Yachts, Private Jets and First Class flights to Formula One races and a lot lot more, including famous guests.</p>
@@ -193,11 +196,11 @@
 		</div>
 		<div class="row">
 			<div class="coming col-lg-4 offset-lg-2">
-				<pclass="faded font-30">Coming 2019 — 2020</p>
+				<pclass="faded font-30">Coming 2019</p>
 					<ul>
-						<li>Predictions</li>
-						<li>Market data integration</li>
-						<li>AI enabled </li>
+						<li>Partnering available</li>
+						<li>Distributor networking</li>
+						<li>Contact us for more info</li>
 					</ul>
 			</div>
 		</div>
