--- a/about.html
+++ b/about.html
@@ -73,10 +73,14 @@
 			</div>
 		</div>
 	</section>
--->
 	<div class="wide-img"><img data-src="assets/images/profile.jpg" width="1480" height="1440" class="lazy img-fluid"></div>
-	<section class="container-fluid">
-		<div class="row"></div>
+-->
+<section class="container-fluid">
+	<div class="row">
+		<div class="col-12 big">
+			<div id="smoke"></div><span>BUILD<br>MEASURE</span><br><span style="color: orange">LEARN</span>
+		</div>
+	</div>
 		<div class="row">
 			<div class="col-12 chapter">
 				<div class="row">
@@ -88,9 +92,9 @@
 					<div class="col-12 col-md-6">
 						<h3>Business Driven Creativity</h3>
 						<p class="faded">
-							<meta charset="utf-8" /><b id="docs-internal-guid-db5e7f7d-ba00-9e8c-3ffa-b58e13f2fffb">Innovative experiences
+							<meta charset="utf-8" /><b>Innovative experiences
 								in business development. New businesses that redefine conventional industries and push technological
-								boundaries. Anagrama constantly challenges the standards of a digital company. &nbsp;</b></p>
+								boundaries. Paradigm constantly challenges the standards of a digital company.</b></p>
 					</div>
 				</div>
 			</div>
