--- a/about.html
+++ b/about.html
@@ -61,26 +61,16 @@
 			</div>
 		</div>
 	</section>
-	<!--
-	<section class="container-fluid">
-		<div class="row"></div>
-		<div class="row">
-			<div class="col-md-6 bigger faded comptext">
-				<p class="h3 faded">Selected clients</p>
-				<p>Bancpost, BCF, BitLocation, BMW, BRD &ndash; Groupe Soci&eacute;t&eacute; G&eacute;n&eacute;rale, iRewind, MAN,
-					Millennium Bank, MINI, moovel Group &ndash; Daimler, Opel, OTP Bank, Royal House of Romania, Saxo Bank, Smith
-					&amp; Smith, TBI Group, World Bank a.o.</p>
-			</div>
-		</div>
-	</section>
-	<div class="wide-img"><img data-src="assets/images/profile.jpg" width="1480" height="1440" class="lazy img-fluid"></div>
--->
 <section class="container-fluid">
+		<div class="row">
+				<div class="col-12 chapter">
 	<div class="row">
 		<div class="col-12 big">
 			<div id="smoke"></div><span>BUILD<br>MEASURE</span><br><span style="color: orange">LEARN</span>
 		</div>
 	</div>
+	</div>
+</div>
 		<div class="row">
 			<div class="col-12 chapter">
 				<div class="row">
