--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
 <a href="labeldrinkers.html" class="minimove col-lg-6 project-item">
 			<div class="proj-category tag faded">&nbsp;</div>
 			<div class="proj-info">&nbsp;<br>&nbsp;</div>
-			<div class="img-container" style="background-image: url('assets/images/gay.jpg');"><img src="assets/img/list-placeholder.png"
+			<div class="img-container" style="background-image: url('assets/images/jayz.jpg');"><img src="assets/img/list-placeholder.png"
 				 class="img-fluid" alt=""></div>
 				</a>
 	</div>
