--- a/about.html
+++ b/about.html
@@ -118,12 +118,12 @@
 		<div class="row"><div class="minimove col-lg-6 project-item">
 				<div class="proj-category tag faded">Monir Eriksson</div>
 				<div class="proj-info">Content Creator<br>Supervising Editor<br>Supervisor Post Production</div>
-				<div class="img-container" style="background-image: url('assets/images/mb_moovel_wts_2.png');"><img src="assets/img/list-placeholder.png"
+				<div class="img-container" style="background-image: url('assets/images/monir.jpg');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
 				</div><div class="minimove col-lg-6 project-item">
 				<div class="proj-category tag faded">Jürgen Buchmann</div>
 				<div class="proj-info">Content Creator<br>Business Developer<br>Global Networker</div>
-				<div class="img-container" style="background-image: url('assets/images/mb_moovel_ID_2.png');"><img src="assets/img/list-placeholder.png"
+				<div class="img-container" style="background-image: url('assets/images/jb.jpg');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
 				</div>
 		</div>
