--- a/labeldrinkers.html
+++ b/labeldrinkers.html
@@ -79,127 +79,129 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-10 col-md-8">
-					<p>In Label Drinkers the viewer will be shown the magical world of Champagne (Season 1) where producers, together with our recognised hosts discuss everything from wine making processes down to nerdy details, satisfying the most prestigious taster or enthusiast.</p>
+					<p>In Label Drinkers the viewer will be shown the magical world of Champagne <span class="faded">[SE01]</span> where producers, together with our recognised hosts discuss everything from wine making processes down to nerdy details, satisfying the most prestigious taster or enthusiast.</p>
 					<p style="color:orange">But wait, that's what all series about beverages do!!</p>				
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 col-md-4">			
+				<div class="col-xs-10 col-md-8">			
 						<p>We've done it differently, by gathering some of the worlds leading experts to host and reveal what people really would like to watch...</p>
 						<p>The consuming side and their behaviours.</p>
 				</div>
-				<div class="col-xs-6 col-md-4">			
-					<p>From luxurious fine dining around the world to celebrities, party life, hidden and mysterious sides of rich and famous with Yachts, Private Jets and First Class flights to Formula One races and a lot lot more, including famous guests.</p>
-			</div>
-			<div class="col-xs-6 col-md-4">			
-				<p>Simultaneously this series will uncover and reveal myths connected to each episodes story line.</p>	
-				<p>Find out more below or head over to labeldrinkers.com</p>
-		</div>
 			</div>
 		</section>
 	<section class="container-fluid">
 		<div class="row centered">
-			<div class="col-lg-2 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/bjornstierne.jpg" alt="">
+			<div class="col-lg-3 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/icon_house_guests.png" alt="">
 				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-						<line stroke-dasharray="5, 5" x1="10%" y1="0" x2="10%" y2="35%" />
-						<line stroke-dasharray="5, 5" x1="10%" y1="35%" x2="78.777%" y2="35%" />
-						<line stroke-dasharray="5, 5" x1="79%" y1="35%" x2="79%" y2="45%" />
-						<line x1="77.9%" y1="45%" x2="79%" y2="45.9%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<line x1="79%" y1="45.9%" x2="80.1%" y2="45%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
-					</svg></div>
-			</div>
-			<div class="col-lg-4 offset-lg-2">
-				<h2 class="font-40 titlev">Björnstierne Antonson</h2>
-				<p class="faded font-30">A tatoo'd sommelier and Decanter World Wine Awards Judge.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-4 offset-lg-6 mt-120">
-				<ul>
-					<li>Substations</li>
-					<li>Industrial machines and gear</li>
-					<li>Production lines</li>
-					<li>Industrial facilities</li>
-					<li>Support systems</li>
-					<li>Legacy monitoring gear</li>
-				</ul>
-			</div>
-		</div>
-	</section>
-	<section class="container-fluid">
-		<div class="row centered">
-			<div class="col-lg-4 order-lg-6 iconv">
-				<div class="row">
-					<div class="col-lg-8 offset-lg-4 text-right"><img class="img-fluid icons float-lg-right" src="assets/images/iot-tower.png"
-						 alt=""></div>
-				</div>
-			</div>
-			<div class="col-lg-4 float-lg-left offset-lg-2">
-				<h2 class="font-40 titlev">Andreas Larsson</h2>
-				<p class="faded font-30">Sommelier World Champion, European Sommelier Champion, Swedish Sommelier Champion.</p>
-				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-						<line stroke-dasharray="5, 5" x1="79%" y1="5%" x2="79%" y2="25%" />
-						<line stroke-dasharray="5, 5" x1="79%" y1="25%" x2="18%" y2="25%" />
-						<line stroke-dasharray="5, 5" x1="18%" y1="25%" x2="18%" y2="45%" />
-						<line x1="16.9%" y1="45%" x2="18%" y2="46%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<line x1="18%" y1="46%" x2="19.1%" y2="45%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
-					</svg></div>
-			</div>
-		</div>
-	</section>
-	<section class="container-fluid mt-180">
-		<div class="row centered">
-			<div class="col-lg-3 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/iot-cloud.png" alt="">
-				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-						<line stroke-dasharray="5, 5" x1="17.5%" y1="0" x2="17.5%" y2="50%" />
-						<line stroke-dasharray="5, 5" x1="17.5%" y1="50%" x2="47.5%" y2="50%" />
-						<line stroke-dasharray="5, 5" x1="47.5%" y1="50%" x2="47.5%" y2="60%" />
-						<line x1="46.4%" y1="60%" x2="47.5%" y2="61%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<line x1="47.5%" y1="61%" x2="48.6%" y2="60%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line stroke-dasharray="5, 5" x1="10%" y1="0" x2="10%" y2="12%" />
+						<line stroke-dasharray="5, 5" x1="10%" y1="12%" x2="78.777%" y2="12%" />
+						<line stroke-dasharray="5, 5" x1="79%" y1="12%" x2="79%" y2="25%" />
+						<line x1="77.9%" y1="25%" x2="79%" y2="25.9%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line x1="79%" y1="25.9%" x2="80.1%" y2="25%" stroke="white" stroke-width="20" stroke-linecap="square" />
 						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
 					</svg></div>
 			</div>
 			<div class="col-lg-4 offset-lg-1">
 				<h2 class="font-40 titlev">Storyline</h2>
-				<p class="faded font-30">The qwest to find, reveal or bust myths take our hosts around the globe. Meeting everything from a selection of wine makers and chef de caves to the sometimes complete opposite in their customers or consumers as we call them here.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-4 offset-lg-6 mt-120">
-				<ul>
-					<li>QoS – graphs and reports</li>
-					<li>Alerts and notifications</li>
-					<li>Incident & fraud detection</li>
-					<li>Users & organization management</li>
-					<li>Devices, circuits and clusters admin</li>
-					<li>3PP systems interfacing</li>
-					<li>Ready for prediction, industrial ERP, </li>
-					<li>GIS, smart maintenance process feeds</li>
-				</ul>
+				<p class="faded font-30">
+					Two hosts with world class expertise and award-wining resumes in the gastronomical topic revealing luxurious fine dining and behaviours around the world.
+					Secrets from celebrities party life to hidden and mysterious sides of the rich and famous, sports, First Class flights to Formula One races and a lot lot more, including famous guests.
+					Simultaneously this series will uncover stories and reveal myths connected to each episode story line.
+				</p>
 			</div>
 		</div>
 	</section>
 	<section class="container-fluid">
-		<div id="rectangles">
-			<div class="row">
-				<div class="col-1 offset-2"><span class="rect"></span></div>
-				<div class="col-1"><span class="rect"></span></div>
-				<div class="col-1"><span class="rect"></span></div>
-				<div class="col-1"><span class="rect"></span></div>
-				<div class="col-1"><span class="rect"></span></div>
-				<div class="col-1"><span class="rect"></span></div>
-				<div class="col-1"><span class="rect"></span></div>
-				<div class="col-1"><span class="rect"></span></div>
+		<div class="row centered">
+			<div class="col-lg-5 order-lg-6 iconv">
+				<div class="row">
+					<div class="col-lg-8 offset-lg-2 text-right"><img class="img-fluid icons float-lg-right" src="assets/images/icon_champagne_region_bottle.png"
+						 alt=""></div>
+				</div>
+			</div>
+			<div class="col-lg-4 float-lg-left offset-lg-2">
+				<h2 class="font-40 titlev">Season One</h2>
+				<p class="faded font-30">The first season head beverage have a champagne focus to uniqueness elements we newer heard before, and we reveal the secrets of the region and the uniqueness of the only place in the world to be named champagne.<br>
+					to celebrities, party life, hidden and mysterious sides of rich and famous with Yachts, Private Jets and First Class flights to Formula One races and a lot lot more, including famous guests.</p>
+				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
+						<line stroke-dasharray="5, 5" x1="79%" y1="0%" x2="79%" y2="5%" />
+						<line stroke-dasharray="5, 5" x1="79%" y1="5%" x2="18%" y2="5%" />
+						<line stroke-dasharray="5, 5" x1="18%" y1="20%" x2="18%" y2="5%" />
+						<line x1="16.9%" y1="20%" x2="18%" y2="21%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line x1="18%" y1="21%" x2="19.1%" y2="20%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
+					</svg></div>
 			</div>
 		</div>
+	</section>
+	<section class="container-fluid">
+		<div class="row centered">
+			<div class="col-lg-3 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/icon_chateau.png" alt="">
+				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
+						<line stroke-dasharray="5, 5" x1="17.5%" y1="0" x2="17.5%" y2="5%" />
+						<line stroke-dasharray="5, 5" x1="17.5%" y1="40%" x2="76%" y2="40%" />
+						<line stroke-dasharray="5, 5" x1="76%" y1="40%" x2="76%" y2="50%" />
+						<line x1="75%" y1="50%" x2="76%" y2="51%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line x1="76%" y1="51%" x2="77%" y2="50%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
+					</svg></div>
+			</div>
+			<div class="col-lg-4 offset-lg-1">
+				<h2 class="font-40 titlev">Magic Castles</h2>
+				<p class="faded font-30">We reveal the untold storys from famous champagne houses and se the hidden treasures that goes way beyond traditional tasting.<br>
+					The qwest to find, reveal or bust myths take our hosts around the globe. Meeting everything from a selection of wine makers and chef de caves to the sometimes complete opposite in their customers or consumers as we call them here.</p>
+			</div>
+		</div>
+		<div class="row centered">
+			<div class="col-lg-3 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/icon_party_gastro.png" alt="">
+				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
+						<line stroke-dasharray="5, 5" x1="17.5%" y1="0" x2="17.5%" y2="6%" />
+
+					</svg></div>
+			</div>
+			<div class="col-lg-4 offset-lg-1">
+				<h2 class="font-40 titlev">Crazy Behaviours</h2>
+				<p class="faded font-30">Besides the producers point of view we also explore the consumer behaviours around this beverage, all from crazy poolpartys, insane tabs to bottle delivery we cant imagine.</p>
+			</div>
+		</div>
+	</section>
+	<section class="container-fluid">
+			<div class="row centered">
+				<div class="col-lg-5 order-lg-6 iconv">
+					<div class="row">
+						<div class="col-lg-8 offset-lg-2"><img class="img-fluid icons float-lg-right" src="assets/images/icon_eye.png"
+							 alt=""></div>
+					</div>
+				</div>
+				<div class="col-lg-4 float-lg-left offset-lg-2">
+					<h2 class="font-40 titlev">Audience</h2>
+					<p class="faded font-30">The series to be distributed for a Global audience, produced in a new agile workflow to gain speed and efficency.</p>
+				</div>
+			</div>
+		<div class="row centered">
+			<div class="minimove col-lg-3 offset-lg-1 project-item">
+				<div class="proj-category tag faded"></div>
+				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
+					 class="img-fluid" alt=""></div>
+				</div><div class="minimove col-lg-3 project-item">
+				<div class="proj-category tag faded"></div>
+				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
+					 class="img-fluid" alt=""></div>
+				</div>
+			<div class="minimove col-lg-3 project-item">
+				<div class="proj-category tag faded"></div>
+				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
+					 class="img-fluid" alt=""></div>
+			</div>
+		</div>
+	<section class="container-fluid">
 		<div class="row">
 			<div class="coming col-lg-4 offset-lg-2">
-				<pclass="faded font-30">Coming 2019</p>
+				<p class="faded font-30">Coming 2019</p>
 					<ul>
-						<li>Partnering available</li>
-						<li>Distributor networking</li>
+						<li>Partnerships available</li>
+						<li>Searching Distributors</li>
 						<li>Contact us for more info</li>
 					</ul>
 			</div>
@@ -272,27 +274,6 @@
 			</div>
 		</div>
 	</footer>
-	<div id="dp">
-		<div class="container-fluid"><a id="close-dp"><svg class="svg-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;"
-				 xml:space="preserve">
-					<g>
-						<g>
-							<polygon style="fill:#18191D;" points="34.8,6.6 33.4,5.2 20,18.6 6.6,5.2 5.2,6.6 18.6,20 5.2,33.4 6.6,34.8 20,21.4 33.4,34.8 34.8,33.4 21.4,20 " />
-						</g>
-						<rect x="0" style="fill:none;" width="40" height="40" />
-					</g>
-				</svg></a>
-			<div class="row">
-				<div class="col-xs-10 col-lg-8">
-					<h4>Data <br>protection</h4>Anagrama SRL is registered as personal data operator in the Registry of the National
-					Supervisory Authority for Personal Data Protection under no. 38201.<br>By accessing this site, you agree that
-					Anagrama has the right to process your personal data disclosed as a result of using the Service by the User
-					according to Terms and Privacy policy.
-				</div>
-			</div>
-		</div>
-	</div>
 	<div id="mmol"></div>
 	<script src="assets/js/jquery-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="assets/js/jquery.lazy-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
@@ -300,30 +281,5 @@
 
 	<script src="https://www.anagrama.ro/cms/modules/fuel/assets/js/fuel/fuel_inline.min.js?c=1524092400" type="text/javascript"
 	 charset="utf-8"></script>
-	<div class="__fuel__" id="__fuel_edit_bar__">
-		<form action="https://www.anagrama.ro/cms/pages/ajax_page_edit/" method="post" id="__fuel_edit_bar_form__">
-			<div class="buttonbar buttonbar_notop">
-				<ul>
-					<li class="start round exposed"><a href="#" id="__fuel_page_toolbar_toggle__" class="ico ico_fuel" title="Toggle toolbar display"></a></li>
-					<li> &nbsp;<select name="others" id="__fuel_page_others__">
-							<option value="" label="Other pages...">Other pages...</option>
-							<option value="contact" label="contact">contact</option>
-							<option value="cookie" label="cookie">cookie</option>
-							<option value="home" label="home">home</option>
-							<option value="privacy" label="privacy">privacy</option>
-							<option value="profile" label="profile">profile</option>
-							<option value="projects/moovel-app" label="projects/moovel-app">projects/moovel-app</option>
-							<option value="projects/moovel-identity" label="projects/moovel-identity">projects/moovel-identity</option>
-							<option value="terms" label="terms">terms</option>
-						</select></li>
-					<li class="txt"><a href="https://www.anagrama.ro/cms/pages/edit/1?lang=english" title="Back to Admin">Back to
-							Admin</a></li>
-					<li class="txt"><a href="page_router.html" title="Logout of CMS admin">Logout</a></li>
-				</ul>
-				<div class="clear"></div>
-			</div><input type="hidden" name="id" value="1" /><input type="hidden" name="location" value="home" />
-		</form>
-	</div>
 </body>
-
 </html>
