--- a/labeldrinkers.html
+++ b/labeldrinkers.html
@@ -27,10 +27,9 @@
 				</script>
 				<link href="https://www.anagrama.ro/cms/modules/fuel/assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
 			</head>
-			
-			<body class="animated"><a name="top" id="top"></a>
-				<header>
-					<div class="container-fluid"><a href="index.html" class="logo">Paradigm</a><a id="menu-open"><svg class="svg-icon"
+<body class="animated"><a name="top" id="top"></a>
+	<header>
+			<div class="container-fluid"><a href="index.html" class="logo">Paradigm</a><a id="menu-open"><svg class="svg-icon"
 							 version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 							 viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
 								<g>
@@ -56,11 +55,9 @@
 						<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/ENnixTCoSjn"
 							 target="_blank">Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
 					</nav>
-				</header>
+	</header>
 	<section class="container-fluid">
-			<h1>
 				<h1>Label Drinkers</h1>
-			</h1>
 			<div class="row">
 				<div class="col-md-3">
 					<ul>
@@ -180,21 +177,27 @@
 				</div>
 			</div>
 		<div class="row centered">
-			<div class="minimove col-lg-3 offset-lg-1 project-item">
+			<div class="minimove col-lg-2 offset-lg-2 project-item">
 				<div class="proj-category tag faded"></div>
 				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
-				</div><div class="minimove col-lg-3 project-item">
+				</div><div class="minimove col-lg-2 project-item">
 				<div class="proj-category tag faded"></div>
 				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
 				</div>
-			<div class="minimove col-lg-3 project-item">
+			<div class="minimove col-lg-2 project-item">
 				<div class="proj-category tag faded"></div>
 				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
 			</div>
+			<div class="minimove col-lg-2 project-item">
+					<div class="proj-category tag faded"></div>
+					<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
+						 class="img-fluid" alt=""></div>
+				</div>
 		</div>
+	</section>
 	<section class="container-fluid">
 		<div class="row">
 			<div class="coming col-lg-4 offset-lg-2">
