--- a/labeldrinkers.html
+++ b/labeldrinkers.html
@@ -91,11 +91,11 @@
 		<div class="row centered">
 			<div class="col-lg-3 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/icon_house_guests.png" alt="">
 				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-						<line stroke-dasharray="5, 5" x1="10%" y1="0" x2="10%" y2="12%" />
-						<line stroke-dasharray="5, 5" x1="10%" y1="12%" x2="78.777%" y2="12%" />
-						<line stroke-dasharray="5, 5" x1="79%" y1="12%" x2="79%" y2="25%" />
-						<line x1="77.9%" y1="25%" x2="79%" y2="25.9%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<line x1="79%" y1="25.9%" x2="80.1%" y2="25%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line stroke-dasharray="5, 5" x1="16%" y1="0" x2="16%" y2="12%" />
+						<line stroke-dasharray="5, 5" x1="16%" y1="12%" x2="78%" y2="12%" />
+						<line stroke-dasharray="5, 5" x1="78%" y1="12%" x2="78%" y2="25%" />
+						<line x1="77%" y1="25%" x2="78%" y2="25.9%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line x1="78%" y1="25.9%" x2="79%" y2="25%" stroke="white" stroke-width="20" stroke-linecap="square" />
 						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
 					</svg></div>
 			</div>
@@ -118,15 +118,14 @@
 				</div>
 			</div>
 			<div class="col-lg-4 float-lg-left offset-lg-2">
-				<h2 class="font-40 titlev">Season One</h2>
-				<p class="faded font-30">The first season head beverage have a champagne focus to uniqueness elements we newer heard before, and we reveal the secrets of the region and the uniqueness of the only place in the world to be named champagne.<br>
-					to celebrities, party life, hidden and mysterious sides of rich and famous with Yachts, Private Jets and First Class flights to Formula One races and a lot lot more, including famous guests.</p>
+				<h2 class="font-40 titlev">Why Champagne?</h2>
+				<p class="faded font-30">The first seasons have a clear Champagne focus to highlight unique elements we've newer heard of or seen before, we reveal the secrets of the region and the uniqueness of the only place in the world allowed to use the name Champagne.</p>
 				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-						<line stroke-dasharray="5, 5" x1="79%" y1="0%" x2="79%" y2="5%" />
-						<line stroke-dasharray="5, 5" x1="79%" y1="5%" x2="18%" y2="5%" />
-						<line stroke-dasharray="5, 5" x1="18%" y1="20%" x2="18%" y2="5%" />
-						<line x1="16.9%" y1="20%" x2="18%" y2="21%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<line x1="18%" y1="21%" x2="19.1%" y2="20%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line stroke-dasharray="5, 5" x1="78%" y1="0%" x2="78%" y2="5%" />
+						<line stroke-dasharray="5, 5" x1="78%" y1="5%" x2="16%" y2="5%" />
+						<line stroke-dasharray="5, 5" x1="16%" y1="20%" x2="16%" y2="5%" />
+						<line x1="15%" y1="20%" x2="16%" y2="21%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line x1="16%" y1="21%" x2="17%" y2="20%" stroke="white" stroke-width="20" stroke-linecap="square" />
 						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
 					</svg></div>
 			</div>
@@ -136,29 +135,29 @@
 		<div class="row centered">
 			<div class="col-lg-3 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/icon_chateau.png" alt="">
 				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-						<line stroke-dasharray="5, 5" x1="17.5%" y1="0" x2="17.5%" y2="5%" />
-						<line stroke-dasharray="5, 5" x1="17.5%" y1="40%" x2="76%" y2="40%" />
-						<line stroke-dasharray="5, 5" x1="76%" y1="40%" x2="76%" y2="50%" />
-						<line x1="75%" y1="50%" x2="76%" y2="51%" stroke="white" stroke-width="20" stroke-linecap="square" />
-						<line x1="76%" y1="51%" x2="77%" y2="50%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line stroke-dasharray="5, 5" x1="16%" y1="0" x2="16%" y2="8%" />
+						<line stroke-dasharray="5, 5" x1="16%" y1="43%" x2="78%" y2="43%" />
+						<line stroke-dasharray="5, 5" x1="78%" y1="43%" x2="78%" y2="50%" />
+						<line x1="77%" y1="50%" x2="78%" y2="51%" stroke="white" stroke-width="20" stroke-linecap="square" />
+						<line x1="78%" y1="51%" x2="79%" y2="50%" stroke="white" stroke-width="20" stroke-linecap="square" />
 						<style><![CDATA[line{stroke: white;stroke-width: 2;}]]></style>
 					</svg></div>
 			</div>
 			<div class="col-lg-4 offset-lg-1">
-				<h2 class="font-40 titlev">Magic Castles</h2>
+				<h2 class="font-40 titlev">Wine Producers</h2>
 				<p class="faded font-30">We reveal the untold storys from famous champagne houses and se the hidden treasures that goes way beyond traditional tasting.<br>
-					The qwest to find, reveal or bust myths take our hosts around the globe. Meeting everything from a selection of wine makers and chef de caves to the sometimes complete opposite in their customers or consumers as we call them here.</p>
+					The qwest to find, reveal or bust myths take our hosts around the globe. Meeting everything from a selection of wine makers and chef de caves to the sometimes complete opposite in their customers or consumers as we call them here.</p><p>&nbsp;</p>
 			</div>
 		</div>
 		<div class="row centered">
 			<div class="col-lg-3 offset-lg-2 iconv"><img class="img-fluid icons" src="assets/images/icon_party_gastro.png" alt="">
 				<div class="svg-container-one"><svg class="line-arr" width="100%" height="80%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-						<line stroke-dasharray="5, 5" x1="17.5%" y1="0" x2="17.5%" y2="6%" />
+						<line stroke-dasharray="5, 5" x1="16%" y1="0" x2="16%" y2="5.5%" />
 
 					</svg></div>
 			</div>
 			<div class="col-lg-4 offset-lg-1">
-				<h2 class="font-40 titlev">Crazy Behaviours</h2>
+				<h2 class="font-40 titlev">Consumption Behaviours</h2>
 				<p class="faded font-30">Besides the producers point of view we also explore the consumer behaviours around this beverage, all from crazy poolpartys, insane tabs to bottle delivery we cant imagine.</p>
 			</div>
 		</div>
