--- a/labeldrinkers.html
+++ b/labeldrinkers.html
@@ -73,6 +73,13 @@
 						<li class="faded">Hospitality</li>
 					</ul>
 				</div>
+				<div class="col-md-3">
+						<ul>
+							<li class="faded">Shoot in RED 8K</li>
+							<li class="faded">Graded on Smoke</li>
+							<li class="faded">Exported in Dolby Vision & Atmos</li>
+						</ul>
+					</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-10 col-md-8">
@@ -203,7 +210,7 @@
 				<p class="faded font-30">Coming 2019</p>
 					<ul>
 						<li>Partnerships available</li>
-						<li>Searching Distributors</li>
+						<li>Distributors welcome</li>
 						<li>Contact us for more info</li>
 					</ul>
 			</div>
