--- a/labeldrinkers.html
+++ b/labeldrinkers.html
@@ -75,9 +75,9 @@
 				</div>
 				<div class="col-md-3">
 						<ul>
-							<li class="faded">Shoot in RED 8K</li>
-							<li class="faded">Graded on Smoke</li>
-							<li class="faded">Exported in Dolby Vision & Atmos</li>
+							<li class="faded">RED DSMC2 8K</li>
+							<li class="faded">Autodesk Smoke</li>
+							<li class="faded">Dolby Vision & Atmos</li>
 						</ul>
 					</div>
 			</div>
@@ -183,24 +183,14 @@
 				</div>
 			</div>
 		<div class="row centered">
-			<div class="minimove col-lg-2 offset-lg-2 project-item">
+			<div class="minimove col-lg-4 offset-lg-2 project-item">
 				<div class="proj-category tag faded"></div>
-				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
+				<div class="img-container" style="background-image: url('assets/images/001.gif');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
-				</div><div class="minimove col-lg-2 project-item">
+				</div><div class="minimove col-lg-4 project-item">
 				<div class="proj-category tag faded"></div>
-				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
+				<div class="img-container" style="background-image: url('assets/images/002.gif');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
-				</div>
-			<div class="minimove col-lg-2 project-item">
-				<div class="proj-category tag faded"></div>
-				<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
-					 class="img-fluid" alt=""></div>
-			</div>
-			<div class="minimove col-lg-2 project-item">
-					<div class="proj-category tag faded"></div>
-					<div class="img-container" style="background-image: url('assets/images/jayz.gif');"><img src="assets/img/list-placeholder.png"
-						 class="img-fluid" alt=""></div>
 				</div>
 		</div>
 	</section>
