--- a/labeldrinkers.html
+++ b/labeldrinkers.html
@@ -191,7 +191,11 @@
 				<div class="proj-category tag faded"></div>
 				<div class="img-container" style="background-image: url('assets/images/002.gif');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
-				</div>
+			</div>
+			<div class="coming col-lg-8 offset-lg-2">
+					<div class="img-container" style="background-image: url('assets/images/logo_row.png'); margin-top:15%; height: 150px;opacity:0.25"><img src="assets/img/list-placeholder.png"
+						class="img-fluid" alt=""></div>
+			</div>
 		</div>
 	</section>
 	<section class="container-fluid">
