--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body><a name="top" id="top"></a>
 	<header>
-		<div class="container-fluid"><a href="index.html" class="logo">Paradigm</a><a id="menu-open"><svg class="svg-icon"
+		<div class="container-fluid"><a href="/" class="logo">Paradigm</a><a id="menu-open"><svg class="svg-icon"
 				 version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 				 viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
 					<g>
@@ -40,42 +40,82 @@
 						</g>
 						<rect style="fill:none;" width="40" height="40" />
 					</g>
-				</svg></a><a id="menu-home" href="index.html">A</a>
+				</svg></a><a id="menu-home" href="/">PDGMG</a>
 			<ul class="nav">
-				<li><a href="labeldrinkers.html">Label Drinkers</a></li>
-				<li><a href="#prodteam">Production Team</a></li>
-				<li><a href="about.html">About Us</a></li>
+				<li><a href="labeldrinkers/">Formats</a></li>
+				<li><a href="#">About Us</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 			<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/ENnixTCoSjn"
 				 target="_blank">Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
 		</nav>
 	</header>
-	<section class="container-fluid banner" id="banner">
+	<section class="container-fluid" id="banner">
 		<div class="row">
 			<div class="col-12 big">
-				<div id="smoke"></div><span>CONTENT<br>CREATION</span><span style="color: orange">RE-INVENTED</span>
+				<div id="smoke"></div>
+				<span>CONTENT<br>CREATION</span>
+				<span style="color: orange">RE-INVENTED</span>
 			</div>
-			<div class="col-12 col-lg-6 head">
+		</div>
+		<div class="row">
+			<div class="col-xs-10 col-md-8">
 				<p>We are believers of the never satisfying moment of status quo. Things change, everything change, and these days TV audience have become VOD consumers. We believe in content that attracts, content that gives.</p>
-				<p><a href="about.html">More</a></p>
+				&nbsp;
+				<p>We create content and series using a unique workflow to create extraordinaire elegance. By using the latest and greatest in technology, together with a lean startup mentality we radically change the traditional workflow to a more future proof and effective production, that also counts for our creations.</p>
+				&nbsp;
+				<h3>Business Driven Creativity</h3>
+				<p class="faded">Innovative experiences in business development brought to the world of content creation. We add new businesses on top of traditional businesses to redefine conventional industries and push technological boundaries. We constantly challenges the standards of a digital company.</p>
+				
+			</div>
 			</div>
 		</div>
 	</section>
 	<section class="container-fluid">
+			<div class="row">
+				<div class="col-12 col-md-6">
+					<h2 class="h1">Creative Team</h2>
+							<h3 style="color: orange">Collective Experiences Matter</h3>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+			<div class="row"><div class="minimove col-lg-4 project-item">
+					<div class="proj-category tag faded">Monir Eriksson</div>
+					<div class="proj-info">Content Creator<br>Supervising Editor<br>Supervisor Post Production</div>
+					<div class="img-container" style="background-image: url('assets/images/monir.jpg');"><img src="assets/img/list-placeholder.png"
+						 class="img-fluid" alt=""></div>
+						 <p class="faded footer"><br>With 20 years of experience in the industry and recently created worlds first E-sport Entertainment Series - Gamerz, Monir have a clear vision to re-define how Series are produced while simultaneously beeing long term profitable.</p>
+					</div><div class="minimove col-lg-4 project-item">
+					<div class="proj-category tag faded">Jürgen Buchmann</div>
+					<div class="proj-info">Content Creator<br>Business Developer<br>Global Networker</div>
+					<div class="img-container" style="background-image: url('assets/images/jb.jpg');"><img src="assets/img/list-placeholder.png"
+						 class="img-fluid" alt=""></div>
+						 <p class="faded footer"><br>Adding 20 years of additional experience with several tech startups and more recently mastering Digital Transformation in various businesses, Jürgen have a great reportoar of shaping businesses to use new methodologies.</p>
+					</div>
+					<div class="minimove col-lg-4 project-item">
+							<div class="proj-category tag faded">You?</div>
+							<div class="proj-info"><br>Sales & Marketing Director<br>&nbsp;</div>
+							<div class="img-container" style="background-image: url('assets/images/x.jpg');"><img src="assets/img/list-placeholder.png"
+								 class="img-fluid" alt=""></div>
+								 <p class="faded footer"><br>We are looking for a sales & marketing director with a track record in deals and distribution across the industry.</p>
+							</div>
+				</div>
+		</section>
+	
+	<section class="container-fluid">
 		<div class="row" id="projects">
 			<div class="col-lg-6">
-				<h2 class="h1">Projects</h2>
+				<h2 class="h1">Formats</h2>
 			</div>
 			<div class="clearfix"></div>
 		</div>
-		<div class="row"><a href="labeldrinkers.html" class="minimove col-lg-6 project-item">
+		<div class="row"><a href="labeldrinkers/" class="minimove col-lg-6 project-item">
 				<div class="proj-category tag faded">EDUTAINMENT</div>
 				<div class="proj-info">Label Drinkers<br>The Gastronomical equivalent to Top Gear</div>
 				<div class="img-container" style="background-image: url('assets/images/hosts.jpg');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
 					</a>
-<a href="labeldrinkers.html" class="minimove col-lg-6 project-item">
+<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
 			<div class="proj-category tag faded">&nbsp;</div>
 			<div class="proj-info">&nbsp;<br>&nbsp;</div>
 			<div class="img-container" style="background-image: url('assets/images/jayz.jpg');"><img src="assets/img/list-placeholder.png"
@@ -83,32 +123,7 @@
 				</a>
 	</div>
 	</section>
-	<section class="container-fluid">
-		<div class="row" id="prodteam">
-			<div class="col-lg-6">
-				<h2 class="h1">Production Team</h2>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-		<div class="row"><div class="minimove col-lg-3 project-item">
-				<div class="proj-category tag faded"></div>
-				<div class="proj-info">Mikael Flodell<br>Series Director</div>
-				<div class="img-container" style="background-image: url('assets/images/flodell.jpg');"><img src="assets/img/list-placeholder.png"
-					 class="img-fluid" alt=""></div>
-				</div><div class="minimove col-lg-3 project-item">
-				<div class="proj-category tag faded"></div>
-				<div class="proj-info">Roy Rossovitch<br>DOP & Cinematographer</div>
-				<div class="img-container" style="background-image: url('assets/images/roy.jpg');"><img src="assets/img/list-placeholder.png"
-					 class="img-fluid" alt=""></div>
-				</div>
-			<div class="minimove col-lg-3 project-item">
-				<div class="proj-category tag faded"></div>
-				<div class="proj-info">Bernt Ekelund<br>Supervising Sound Editor</div>
-				<div class="img-container" style="background-image: url('assets/images/bernte.jpg');"><img src="assets/img/list-placeholder.png"
-					 class="img-fluid" alt=""></div>
-			</div>
-		</div>
-	</section><a name="contact" id="contact"></a>
+<a name="contact" id="contact"></a>
 	<section class="container-fluid nopb">
 		<div class="row" id="contact">
 			<div class="col-12 pb2l">
