--- a/index.html
+++ b/index.html
@@ -59,17 +59,22 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-md-8">
+			<div class="col-xs-10 col-md-10">
 				<p>We are believers of the never satisfying moment of status quo. Things change, everything change, and these days TV audience have become VOD consumers. We believe in content that attracts, content that gives.</p>
 				&nbsp;
 				<p>We create content and series using a unique workflow to create extraordinaire elegance. By using the latest and greatest in technology, together with a lean startup mentality we radically change the traditional workflow to a more future proof and effective production, that also counts for our creations.</p>
-				&nbsp;
-				<h3>Business Driven Creativity</h3>
-				<p class="faded">Innovative experiences in business development brought to the world of content creation. We add new businesses on top of traditional businesses to redefine conventional industries and push technological boundaries. We constantly challenges the standards of a digital company.</p>
-				
 			</div>
 			</div>
 		</div>
+	</section>
+	<section class="container-fluid">
+			<div class="row">
+				<div class="col-12 col-md-10">
+					<h2 class="h1">Business Driven Creativity</h2>
+					<p>Innovative experiences in business development brought to the world of content creation. We add new businesses on top of traditional businesses to redefine conventional industries and push technological boundaries. We constantly challenges the standards of a digital company.</p>
+				</div>
+				<div class="clearfix"></div>
+			</div>
 	</section>
 	<section class="container-fluid">
 			<div class="row">
@@ -80,24 +85,24 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="row"><div class="minimove col-lg-4 project-item">
-					<div class="proj-category tag faded">Monir Eriksson</div>
-					<div class="proj-info">Content Creator<br>Supervising Editor<br>Supervisor Post Production</div>
+					<div class="proj-category tag"></div>
+					<div class="proj-info">Monir Eriksson<br>Content Creator, Author</div>
 					<div class="img-container" style="background-image: url('assets/images/monir.jpg');"><img src="assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
-						 <p class="faded footer"><br>With 20 years of experience in the industry and recently created worlds first E-sport Entertainment Series - Gamerz, Monir have a clear vision to re-define how Series are produced while simultaneously beeing long term profitable.</p>
+						 <p class="footer"><br>With over 20 years experience in productions from Endemol Shine, Warner Bros and recently created worlds first interactive e-sport reality series now creates exclusive global edu-tainment.</p>
 					</div><div class="minimove col-lg-4 project-item">
-					<div class="proj-category tag faded">Jürgen Buchmann</div>
-					<div class="proj-info">Content Creator<br>Business Developer<br>Global Networker</div>
+					<div class="proj-category tag"></div>
+					<div class="proj-info">Jürgen Buchmann<br>Content Creator, Author</div>
 					<div class="img-container" style="background-image: url('assets/images/jb.jpg');"><img src="assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
-						 <p class="faded footer"><br>Adding 20 years of additional experience with several tech startups and more recently mastering Digital Transformation in various businesses, Jürgen have a great reportoar of shaping businesses to use new methodologies.</p>
+						 <p class="footer"><br>Adding 20 years additional experience with several startups and more recently mastering Digital Transformation in various businesses, Jürgen have a great reportoar of shaping businesses to use new methodologies.</p>
 					</div>
 					<div class="minimove col-lg-4 project-item">
-							<div class="proj-category tag faded">You?</div>
-							<div class="proj-info"><br>Sales & Marketing Director<br>&nbsp;</div>
+							<div class="proj-category tag"></div>
+							<div class="proj-info">"Your name here"<br>Sales & Marketing Director</div>
 							<div class="img-container" style="background-image: url('assets/images/x.jpg');"><img src="assets/img/list-placeholder.png"
 								 class="img-fluid" alt=""></div>
-								 <p class="faded footer"><br>We are looking for a sales & marketing director with a track record in deals and distribution across the industry.</p>
+								 <p class="footer"><br>We are looking for a sales & marketing director with a track record in deals and distribution across the industry.</p>
 							</div>
 				</div>
 		</section>
@@ -111,7 +116,7 @@
 		</div>
 		<div class="row"><a href="labeldrinkers/" class="minimove col-lg-6 project-item">
 				<div class="proj-category tag faded">EDUTAINMENT</div>
-				<div class="proj-info">Label Drinkers<br>The Gastronomical equivalent to Top Gear</div>
+				<div class="proj-info">Label Drinkers<br>The gastronomical equivalent to "Top Gear"</div>
 				<div class="img-container" style="background-image: url('assets/images/hosts.jpg');"><img src="assets/img/list-placeholder.png"
 					 class="img-fluid" alt=""></div>
 					</a>
