--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -74,18 +74,18 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-10 col-md-8">
+				<div class="col-xs-10 col-md-10">
 					<p>
-					When most TV shows explore the art, creation, and philosophy behind food in the kitchen, Label Drinkers engage the audience in a journey that digs in-depth and beyond the kitchen inventions. By exploring eccentric consumption behaviours, the industry that supports it, and the variety of myths and legends surrounding the beverage.</p> 
+					When most TV shows explore the art, creation, and philosophy behind food in the kitchen, Label Drinkers engage the audience in a journey that digs in-depth and beyond the kitchen inventions. By exploring eccentric consumption behaviours, the industry that supports it, and the variety of myths and legends covering this seasons prime beverage - Champagne.</p>
 					<p>
 					The viewer will be introduced to the extraordinary excess that originates from the glamorous stories embracing Champagne, together with our recognized hosts experience everything down to the very nerdy details, satisfying the most prestigious taster or enthusiast.</p>				
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-10 col-md-8">			
-				<p style="color: orange">Label Drinkers fusion in education and entertainment invites the viewers into the journey of appreciating the best of both worlds.</p>
+				<div class="col-xs-10 col-md-10">			
+				<p style="color: orange">Label Drinkers fusion of education and entertainment invites the viewers into the journey of appreciating the best of both worlds.</p>
 
-				<p>Label Drinkers will engage the audience in a tour de force around the globe with its exciting and humorous style on the quest to explore the world of Champagne. Finding our hosts revealing untold stories and busting myths, challenged by the best experts in their field, creating unexpected, controversial and thrilling situations - meeting producers, personalities, stars and celebrities in legendary venues and locations around the globe.</p>
+				<p>Label Drinkers will engage the audience in a tour de force around the globe with it's exciting and humorous style on the quest to explore the world of Champagne. Finding our hosts revealing untold stories and busting myths, challenged by the best experts in their field, creating unexpected, controversial and thrilling situations - meeting producers, personalities, stars and celebrities in legendary venues and locations around the globe.</p>
 
 				<p>Exploring the ultimate Champagne experience in the travel-, hospitality- and gastronomical industry, while simultaneously covering historical revelations and trends that over centuries have cemented Champagne as the no.1 beverage of them all. </p>
 				</div>
@@ -100,37 +100,39 @@
 			</div>
 			<div class="row"><div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Mikael Flodell<br>Series Director</div>
+					<div class="proj-info">Mikael Flodell<br>Series Director<br>
+						<a class="footer" href="https://www.imdb.com/name/nm1636869">IMDb</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/flodell.jpg');"><img src="../assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
 					</div><div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Roy Rossovitch<br>DOP & Cinematographer</div>
+					<div class="proj-info">Roy Rossovitch<br>DOP & Cinematographer<br>
+						<a class="footer" href="https://www.imdb.com/name/nm2627488">IMDb</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/roy.jpg');"><img src="../assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
 					</div>
 				<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Josefine Rosengren Karpinski<br>Line Producer</div>
+					<div class="proj-info">Josefine Rosengren Karpinski<br>Line Producer<br>
+						<a class="footer">&nbsp;</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/josefine.jpg');"><img src="../assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
 				</div>
-				<div class="minimove col-lg-3 project-item">
-						<div class="proj-category tag faded"></div>
-						<div class="proj-info"></div>
-						</div>
-				<div class="minimove col-lg-3 project-item">
-						<div class="proj-category tag faded"></div>
-						<div class="proj-info">Todd Daugherty<br>VFX Supervisor</div>
-						<div class="img-container" style="background-image: url('../assets/images/todd.jpg');"><img src="../assets/img/list-placeholder.png"
-							 class="img-fluid" alt=""></div>
-						</div>
+
 					<div class="minimove col-lg-3 project-item">
 						<div class="proj-category tag faded"></div>
-						<div class="proj-info">Bernt Ekelund<br>Supervising Sound Editor</div>
+						<div class="proj-info">Bernt Ekelund<br>Supervising Sound Editor<br>
+							<a class="footer" href="https://www.imdb.com/name/nm0252417">IMDb</a></div>
 						<div class="img-container" style="background-image: url('../assets/images/bernte.jpg');"><img src="../assets/img/list-placeholder.png"
 							 class="img-fluid" alt=""></div>
 					</div>
+					<div class="minimove col-lg-3 project-item">
+							<div class="proj-category tag faded"></div>
+							<div class="proj-info">Todd Daugherty<br>VFX Supervisor<br>
+								<a class="footer" href="https://www.imdb.com/name/nm1562987">IMDb</a></div>
+							<div class="img-container" style="background-image: url('../assets/images/todd.jpg');"><img src="../assets/img/list-placeholder.png"
+								 class="img-fluid" alt=""></div>
+							</div>
 			</div>
 		</section>
 	
