--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -104,12 +104,15 @@
 						<a class="footer" href="https://www.imdb.com/name/nm1636869">IMDb</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/flodell.jpg');"><img src="../assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
-					</div><div class="minimove col-lg-3 project-item">
+						 <span class="footer">Producer and storytelling strengths with proven work beyond the traditional</span>
+					</div>
+					<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
 					<div class="proj-info">Roy Rossovitch<br>DOP & Cinematographer<br>
 						<a class="footer" href="https://www.imdb.com/name/nm2627488">IMDb</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/roy.jpg');"><img src="../assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
+						 <span class="footer">Cinematographer that travels the world to do feature films, global documentaries & series.</span>
 					</div>
 				<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
@@ -117,6 +120,7 @@
 						<a class="footer">&nbsp;</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/josefine.jpg');"><img src="../assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
+						 <span class="footer">SONY Pictures, Columbia Pictures, Monkberry, ACNE Film & Sommelier</span>
 				</div>
 
 					<div class="minimove col-lg-3 project-item">
@@ -125,6 +129,7 @@
 							<a class="footer" href="https://www.imdb.com/name/nm0252417">IMDb</a></div>
 						<div class="img-container" style="background-image: url('../assets/images/bernte.jpg');"><img src="../assets/img/list-placeholder.png"
 							 class="img-fluid" alt=""></div>
+							 <span class="footer">25 years experience and involved in most drama productions in Sweden</span>
 					</div>
 					<div class="minimove col-lg-3 project-item">
 							<div class="proj-category tag faded"></div>
@@ -132,6 +137,7 @@
 								<a class="footer" href="https://www.imdb.com/name/nm1562987">IMDb</a></div>
 							<div class="img-container" style="background-image: url('../assets/images/todd.jpg');"><img src="../assets/img/list-placeholder.png"
 								 class="img-fluid" alt=""></div>
+								 <span class="footer">Paradox Interactive, Digital Domain, Technicolor, Blur Studios</span>
 							</div>
 			</div>
 		</section>
